--- a/app/src/main/res/layout/statistics.xml
+++ b/app/src/main/res/layout/statistics.xml
@@ -9,24 +9,43 @@
     <include layout="@layout/layout_standard_page" />
 
     <TextView
-        android:id="@+id/pg"
-        android:layout_width="200dp"
+        android:id="@+id/title_statistic"
+        android:layout_width="250dp"
         android:layout_height="36dp"
-        android:layout_gravity="start"
         android:fontFamily="@font/alef"
         android:layoutDirection="rtl"
-        android:textAlignment="textStart"
+        android:text="התפלגות ההצבעות לפי:"
+        android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintVertical_bias="0.15" />
+
+    <TextView
+        android:id="@+id/pg"
+        android:layout_width="210dp"
+        android:layout_height="36dp"
+        android:fontFamily="@font/alef"
+        android:layoutDirection="rtl"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2" />
 
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/pieChart"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.6"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
