--- a/app/src/main/res/layout/user_details.xml
+++ b/app/src/main/res/layout/user_details.xml
@@ -6,17 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".UserDetails">
 
-    <include layout="@layout/layout_welcome_page"/>
+    <include layout="@layout/layout_welcome_page" />
 
     <TextView
-        android:layoutDirection="rtl"
-        android:textAlignment="textStart"
-        android:layout_gravity="start"
         android:id="@+id/full_name"
         android:layout_width="81dp"
         android:layout_height="36dp"
+        android:layout_gravity="start"
         android:fontFamily="@font/alef"
+        android:layoutDirection="rtl"
         android:text="שם מלא"
+        android:textAlignment="textStart"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,14 +26,14 @@
         app:layout_constraintVertical_bias="0.3" />
 
     <EditText
-        android:layoutDirection="rtl"
-        android:textAlignment="textStart"
-        android:layout_gravity="start"
         android:id="@+id/User_full_name"
         android:layout_width="200dp"
         android:layout_height="55dp"
+        android:layout_gravity="start"
         android:ems="10"
         android:inputType="textPersonName"
+        android:layoutDirection="rtl"
+        android:textAlignment="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
@@ -42,14 +42,14 @@
         app:layout_constraintVertical_bias="0.28" />
 
     <TextView
-        android:layoutDirection="rtl"
-        android:textAlignment="textStart"
-        android:layout_gravity="start"
         android:id="@+id/ID"
         android:layout_width="126dp"
         android:layout_height="38dp"
+        android:layout_gravity="start"
         android:fontFamily="@font/alef"
+        android:layoutDirection="rtl"
         android:text="תעודת זהות"
+        android:textAlignment="textStart"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,13 +59,13 @@
         app:layout_constraintVertical_bias="0.38" />
 
     <EditText
-        android:layoutDirection="rtl"
-        android:textAlignment="textStart"
-        android:layout_gravity="start"
         android:id="@+id/User_ID"
         android:layout_width="200dp"
         android:layout_height="55dp"
+        android:layout_gravity="start"
         android:inputType="number|textPersonName"
+        android:layoutDirection="rtl"
+        android:textAlignment="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
@@ -74,14 +74,14 @@
         app:layout_constraintVertical_bias="0.36" />
 
     <TextView
-        android:layoutDirection="rtl"
-        android:textAlignment="textStart"
-        android:layout_gravity="start"
         android:id="@+id/YearOfBirth"
         android:layout_width="99dp"
         android:layout_height="32dp"
+        android:layout_gravity="start"
         android:fontFamily="@font/alef"
+        android:layoutDirection="rtl"
         android:text="שנת לידה"
+        android:textAlignment="textStart"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,13 +91,13 @@
         app:layout_constraintVertical_bias="0.46" />
 
     <EditText
-        android:layoutDirection="rtl"
-        android:textAlignment="textStart"
-        android:layout_gravity="start"
         android:id="@+id/User_year_of_birth"
         android:layout_width="200dp"
         android:layout_height="55dp"
+        android:layout_gravity="start"
         android:inputType="number"
+        android:layoutDirection="rtl"
+        android:textAlignment="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
@@ -105,41 +105,44 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.44" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layoutDirection="rtl"
-        android:textAlignment="textStart"
+    <TextView
+        android:id="@+id/userChoosePg"
+        android:layout_width="120dp"
+        android:layout_height="32dp"
         android:layout_gravity="start"
-        android:id="@+id/textInputLayout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
-        android:layout_width="155dp"
-        android:layout_height="55dp"
+        android:fontFamily="@font/alef"
+        android:layoutDirection="rtl"
+        android:text="בחר מפלגה"
+        android:textAlignment="textStart"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.12"
+        app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.56">
+        app:layout_constraintVertical_bias="0.55" />
 
-        <AutoCompleteTextView
-            android:id="@+id/autoCompleteTextView"
-            android:layout_width="166dp"
-            android:layout_height="47dp"
-            android:layout_weight="1"
-            android:fontFamily="@font/alef"
-            android:inputType="none"
-            android:text="בחר מפלגה"
-            android:textSize="18sp" />
-
-
-    </com.google.android.material.textfield.TextInputLayout>
+    <Spinner
+        android:id="@+id/choosePG"
+        android:layout_width="220dp"
+        android:layout_height="45dp"
+        android:background="@android:drawable/btn_dropdown"
+        android:layoutDirection="rtl"
+        android:spinnerMode="dropdown"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.78"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.55" />
 
     <RadioGroup
-        android:layoutDirection="rtl"
-        android:textAlignment="textStart"
-        android:layout_gravity="start"
         android:layout_width="80dp"
         android:layout_height="91dp"
+        android:layout_gravity="start"
+        android:layoutDirection="rtl"
         android:orientation="vertical"
+        android:textAlignment="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.08"
@@ -171,14 +174,15 @@
         android:layout_width="98dp"
         android:layout_height="49dp"
         android:fontFamily="@font/alef"
+        android:layoutDirection="rtl"
         android:onClick="onClickOK"
         android:text="סיום"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.948"
+        app:layout_constraintHorizontal_bias="0.85"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.107" />
+        app:layout_constraintVertical_bias="0.9" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
