--- a/app/src/main/res/layout/citizen_details.xml
+++ b/app/src/main/res/layout/citizen_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserDetails">
+    tools:context=".CitizenDetails">
 
     <include layout="@layout/layout_welcome_page" />
 
