--- a/app/src/main/res/layout/item_view_statistic.xml
+++ b/app/src/main/res/layout/item_view_statistic.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/itemTextView"
-        android:layout_width="260dp"
+        android:layout_width="240dp"
         android:layout_height="70dp"
         android:layoutDirection="rtl"
         android:singleLine="true"
@@ -16,11 +16,11 @@
 
     <Button
         android:id="@+id/button_vote"
-        android:layout_width="80dp"
+        android:layout_width="100dp"
         android:layout_height="50dp"
         android:layoutDirection="rtl"
-        android:onClick="openVotePage"
-        android:text="הצבע"
+        android:textSize="9sp"
+        android:text="צפה בסטטיסטיקות"
         android:textDirection="rtl" />
 
 </LinearLayout>
