--- a/app/src/main/res/layout/signup_citizen.xml
+++ b/app/src/main/res/layout/signup_citizen.xml
@@ -6,18 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".SignupCitizen">
 
-    <include
-        layout="@layout/layout_welcome_page"/>
+    <include layout="@layout/layout_welcome_page" />
 
     <TextView
-        android:layoutDirection="rtl"
-        android:textAlignment="textStart"
-        android:layout_gravity="start"
         android:id="@+id/mail"
-        android:layout_width="81dp"
-        android:layout_height="36dp"
+        android:layout_width="165dp"
+        android:layout_height="40dp"
+        android:layout_gravity="start"
         android:fontFamily="@font/alef"
+        android:layoutDirection="rtl"
         android:text="@string/account_mail"
+        android:textAlignment="textStart"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,29 +26,29 @@
         app:layout_constraintVertical_bias="0.3" />
 
     <EditText
+        android:id="@+id/textUsermailCitizen"
+        android:layout_width="165dp"
+        android:layout_height="40dp"
+        android:layout_gravity="start"
+        android:inputType="textEmailAddress"
         android:layoutDirection="rtl"
         android:textAlignment="textStart"
-        android:layout_gravity="start"
-        android:id="@+id/textUsermail"
-        android:layout_width="200dp"
-        android:layout_height="55dp"
-        android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.28" />
+        app:layout_constraintVertical_bias="0.3" />
 
     <TextView
-        android:layoutDirection="rtl"
-        android:textAlignment="textStart"
-        android:layout_gravity="start"
         android:id="@+id/password"
-        android:layout_width="126dp"
-        android:layout_height="38dp"
+        android:layout_width="165dp"
+        android:layout_height="40dp"
+        android:layout_gravity="start"
         android:fontFamily="@font/alef"
+        android:layoutDirection="rtl"
         android:text="@string/password"
+        android:textAlignment="textStart"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,29 +58,29 @@
         app:layout_constraintVertical_bias="0.38" />
 
     <EditText
+        android:id="@+id/new_password"
+        android:layout_width="165dp"
+        android:layout_height="40dp"
+        android:layout_gravity="start"
+        android:inputType="textPassword"
         android:layoutDirection="rtl"
         android:textAlignment="textStart"
-        android:layout_gravity="start"
-        android:id="@+id/new_password"
-        android:layout_width="200dp"
-        android:layout_height="55dp"
-        android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.36" />
+        app:layout_constraintVertical_bias="0.38" />
 
     <TextView
-        android:layoutDirection="rtl"
-        android:textAlignment="textStart"
-        android:layout_gravity="start"
         android:id="@+id/password_confirm"
-        android:layout_width="150dp"
-        android:layout_height="32dp"
+        android:layout_width="165dp"
+        android:layout_height="40dp"
+        android:layout_gravity="start"
         android:fontFamily="@font/alef"
+        android:layoutDirection="rtl"
         android:text="@string/confirmPass"
+        android:textAlignment="textStart"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,33 +90,182 @@
         app:layout_constraintVertical_bias="0.46" />
 
     <EditText
-        android:layoutDirection="rtl"
-        android:textAlignment="textStart"
-        android:layout_gravity="start"
         android:id="@+id/new_password_valid"
-        android:layout_width="200dp"
-        android:layout_height="55dp"
+        android:layout_width="165dp"
+        android:layout_height="40dp"
+        android:layout_gravity="start"
         android:ems="10"
         android:inputType="textPassword"
+        android:layoutDirection="rtl"
+        android:textAlignment="textStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.44" />
+        app:layout_constraintVertical_bias="0.46" />
 
-    <Button
-        android:id="@+id/OK"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <TextView
+        android:id="@+id/full_name"
+        android:layout_width="165dp"
+        android:layout_height="40dp"
+        android:layout_gravity="start"
         android:fontFamily="@font/alef"
-        android:onClick="onClickOK"
-        android:text="אישור"
+        android:layoutDirection="rtl"
+        android:text="שם מלא"
+        android:textAlignment="textStart"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.089"
+        app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.56" />
+        app:layout_constraintVertical_bias="0.54" />
+
+    <EditText
+        android:id="@+id/User_full_name"
+        android:layout_width="165dp"
+        android:layout_height="40dp"
+        android:layout_gravity="start"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:layoutDirection="rtl"
+        android:textAlignment="textStart"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.54" />
+
+    <TextView
+        android:id="@+id/YearOfBirth"
+        android:layout_width="165dp"
+        android:layout_height="40dp"
+        android:layout_gravity="start"
+        android:fontFamily="@font/alef"
+        android:layoutDirection="rtl"
+        android:text="שנת לידה"
+        android:textAlignment="textStart"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.62" />
+
+    <EditText
+        android:id="@+id/User_year_of_birth"
+        android:layout_width="165dp"
+        android:layout_height="40dp"
+        android:layout_gravity="start"
+        android:inputType="number"
+        android:layoutDirection="rtl"
+        android:textAlignment="textStart"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.62" />
+
+    <TextView
+        android:id="@+id/userChoosePg"
+        android:layout_width="165dp"
+        android:layout_height="40dp"
+        android:layout_gravity="start"
+        android:fontFamily="@font/alef"
+        android:layoutDirection="rtl"
+        android:text="בחר מפלגה"
+        android:textAlignment="textStart"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.71" />
+
+
+    <Spinner
+        android:id="@+id/choosePG"
+        android:layout_width="165dp"
+        android:layout_height="40dp"
+        android:background="@android:drawable/btn_dropdown"
+        android:layoutDirection="rtl"
+        android:spinnerMode="dropdown"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.72" />
+
+    <TextView
+        android:id="@+id/gender"
+        android:layout_width="165dp"
+        android:layout_height="40dp"
+        android:layout_gravity="start"
+        android:fontFamily="@font/alef"
+        android:layoutDirection="rtl"
+        android:text="מגדר"
+        android:textAlignment="textStart"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8" />
+
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_gravity="start"
+        android:layoutDirection="rtl"
+        android:orientation="horizontal"
+        android:textAlignment="textStart"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8">
+
+        <RadioButton
+            android:id="@+id/male"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/alef"
+            android:onClick="onRadioButtonClicked"
+            android:text="זכר"
+            android:textSize="20sp" />
+
+        <RadioButton
+            android:id="@+id/female"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/alef"
+            android:onClick="onRadioButtonClicked"
+            android:text="נקבה"
+            android:textSize="20sp" />
+    </RadioGroup>
+
+    <Button
+        android:id="@+id/finish"
+        android:layout_width="130dp"
+        android:layout_height="49dp"
+        android:fontFamily="@font/alef"
+        android:layoutDirection="rtl"
+        android:onClick="onClickOK"
+        android:text="סיום"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.939" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
