--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -25,7 +25,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.1" />
 
-    <TextView
+    <EditText
         android:id="@+id/textUsermailCitizen"
         android:layout_width="165dp"
         android:layout_height="40dp"
@@ -34,7 +34,7 @@
         android:layoutDirection="rtl"
         android:textAlignment="textStart"
         android:textDirection="rtl"
-        android:textSize="20sp"
+        android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
@@ -125,7 +125,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.34" />
 
-    <TextView
+    <EditText
         android:id="@+id/User_full_name"
         android:layout_width="165dp"
         android:layout_height="40dp"
@@ -134,7 +134,7 @@
         android:layoutDirection="rtl"
         android:textAlignment="textStart"
         android:textDirection="rtl"
-        android:textSize="24sp"
+        android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
@@ -159,7 +159,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.42" />
 
-    <TextView
+    <EditText
         android:id="@+id/User_year_of_birth"
         android:layout_width="165dp"
         android:layout_height="40dp"
@@ -168,7 +168,7 @@
         android:layoutDirection="rtl"
         android:textAlignment="textStart"
         android:textDirection="rtl"
-        android:textSize="24sp"
+        android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
