Change logo file name

--- a/app/src/main/res/layout/layout_standard_page.xml
+++ b/app/src/main/res/layout/layout_standard_page.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layoutDirection="rtl"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/polity_correct_logo" />
 
     <TextView
         android:id="@+id/title_page"
