--- a/app/src/main/res/layout/layout_home_page.xml
+++ b/app/src/main/res/layout/layout_home_page.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/logo"
+        app:srcCompat="@drawable/polity_correct_logo"
         android:layoutDirection="rtl"/>
 
     <TextView
