--- a/app/src/main/res/layout/signup_pm.xml
+++ b/app/src/main/res/layout/signup_pm.xml
@@ -11,8 +11,8 @@
 
     <TextView
         android:id="@+id/mail"
-        android:layout_width="81dp"
-        android:layout_height="36dp"
+        android:layout_width="165dp"
+        android:layout_height="45dp"
         android:layout_gravity="start"
         android:fontFamily="@font/alef"
         android:layoutDirection="rtl"
@@ -27,9 +27,9 @@
         app:layout_constraintVertical_bias="0.3" />
 
     <EditText
-        android:id="@+id/textUsermail"
-        android:layout_width="200dp"
-        android:layout_height="55dp"
+        android:id="@+id/text_usermail"
+        android:layout_width="165dp"
+        android:layout_height="45dp"
         android:layout_gravity="start"
         android:inputType="textEmailAddress"
         android:layoutDirection="rtl"
@@ -39,7 +39,7 @@
         app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.28" />
+        app:layout_constraintVertical_bias="0.3" />
 
     <Button
         android:id="@+id/OK"
